# easyaudio

./: .gitmodules  README.md  hub.py  install.sh  setup.cfg
easyaudio/: hub.py
easyaudio/models/: __init__.py
easyaudio/models/beats/: BEATs.py
easyaudio/signals/: tones.py
easyaudio/utils/: __init__.py
