[metadata]
name = easyaudio
version = 0.0.1
author = Leonardo Pepino
author_email = lpepino@dc.uba.ar
description = Library to extract embeddings from general audio models in a unified way.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = easyaudio
python_requires = >=3.6
install_requires = 
    ginpipe
    soundfile
    pandas